# anyrun-hyprland

./: Cargo.toml  README.md
src/: lib.rs
